# intelligent-search-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md  belgium-corpus-sources.md  data-sources.md  evaluation-prompts.md
docs/evals/: companion_routes.jsonl
intelligent_search_agent/agent/: __init__.py
intelligent_search_agent/agent/assistant/: agent.py  answering.py  companion.py  conversation.py  deps.py  events.py  findings.py  lexicon.py  orchestrator.py  prompt.py  routing.py
intelligent_search_agent/app/: main.py
intelligent_search_agent/app/routes/: __init__.py  admin.py  assets.py  chat.py  documents.py  meetings.py  search.py
intelligent_search_agent/app/static/: app.js  index.html  styles.css
intelligent_search_agent/core/: config.py  logging.py  pricing.py  security.py
intelligent_search_agent/db/: __init__.py  db.py  embeddings.py  pool.py  services.py  telemetry.py
intelligent_search_agent/ingestion/: common.py  corpus_ingest.py  embedding_text.py  image_analysis.py  pdf_extraction.py  repository.py  runner.py
intelligent_search_agent/models/: __init__.py  assets.py  chat.py  documents.py  meetings.py  search.py
intelligent_search_agent/retrieval/: storage.py
scripts/: corpus_health.py  download_belgium_corpus.py  evaluate_companion_routes.py  ingest_belgium_corpus.py  start_local.ps1
sql/: schema.sql
tests/: test_companion_routing.py  test_config.py  test_corpus_ingest.py  test_embedding_text.py
(+3 files in other folders)
